--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -601,7 +601,7 @@ a {
   .header__search {
     display: flex;
     height: 100%;
-    padding: 0 14px; }
+    padding-right: 14px; }
 
 .search {
   flex: 0 0 40%;
@@ -634,7 +634,7 @@ a {
 .nav-cart {
   display: flex;
   align-items: center;
-  padding: 0 14px; }
+  padding-right: 14px; }
   .nav-cart__link {
     height: 100%;
     display: flex; }
@@ -700,8 +700,7 @@ a {
     width: 100%;
     padding: 1.1rem 2rem; }
     .header__search {
-      width: 100%;
-      display: block; }
+      width: 100%; }
 
   .user {
     display: none; } }
